| Bug #8235 | Connection collation change & table create with default result in crash | ||
|---|---|---|---|
| Submitted: | 1 Feb 2005 11:42 | Modified: | 7 Mar 2005 1:37 |
| Reporter: | Daan Broekhof | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S2 (Serious) |
| Version: | 4.1.9/BK 4.1/BK 5.0 | OS: | Linux (Slackware 10.0) |
| Assigned to: | Alexander Barkov | Target Version: | |
[1 Feb 2005 11:42]
Daan Broekhof
[1 Feb 2005 14:02]
Miguel Solorzano
Thank you for the bug report. I was able to repeat on current BK source tree.
[1 Feb 2005 14:14]
Miguel Solorzano
Also 5.0 tree is affected.
[12 Feb 2005 13:41]
Alexander Barkov
Fixed in 4.1.10. I haven't merged into 5.0.x though, because of conflicts in someone's else changes.
[7 Mar 2005 1:37]
Paul DuBois
Noted in 4.1.10, 5.0.3 changelogs.
