Bug#8235 Connection collation change & table create with default result in crash