sql/field.cc
@@ -1777,6 +1777,14 @@ void Field_medium::sql_type(String &res) const
 ****************************************************************************/
 
 
+static bool test_if_minus(CHARSET_INFO *cs,
+                          const char *s, const char *e)
+{
+  my_wc_t wc;
+  return cs->cset->mb_wc(cs, &wc, (uchar*) s, (uchar*) e) > 0 && wc == '-';
+}
+
+
 int Field_long::store(const char *from,uint len,CHARSET_INFO *cs)
 {
   long tmp;
@@ -1790,7 +1798,7 @@ int Field_long::store(const char *from,uint len,CHARSET_INFO *cs)
 
   if (unsigned_flag)
   {
-    if (!len || *from == '-')
+    if (!len || test_if_minus(cs, from, from + len))
     {
       tmp=0;					// Set negative to 0
       my_errno=ERANGE;
@@ -2086,7 +2094,7 @@ int Field_longlong::store(const char *from,uint len,CHARSET_INFO *cs)
   my_errno=0;
   if (unsigned_flag)
   {
-    if (!len || *from == '-')
+    if (!len || test_if_minus(cs, from, from + len))
     {
       tmp=0;					// Set negative to 0
       my_errno= ERANGE;
